# src/main/kotlin/com/wutsi/platform/security/dto/AuthenticationRequest.kt
@@ -6,5 +6,8 @@ import kotlin.String
 public data class AuthenticationRequest(
     @get:NotBlank
     public val type: String = "",
-    public val apiKey: String? = null
+    public val apiKey: String? = null,
+    public val phoneNumber: String = "",
+    public val mfaToken: String = "",
+    public val verificationCode: String = ""
 )
